--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=9000
 
-spring.datasource.url=jdbc:mysql://localhost:3306/tutionclass?userSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/webservicehub?userSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 
